bug fix for number 716 - added overflow hidden property to tr td cell and made table fixed size

--- a/portals/mtwilson-portal/src/main/webapp/CSS/home.css
+++ b/portals/mtwilson-portal/src/main/webapp/CSS/home.css
@@ -254,6 +254,7 @@ h5, h6
 	text-align: center;
 	width: 100%;
 	height: 45px;
+        table-layout: fixed;
 	}
 .tableDisplay thead{
 	background-color: #5D7B9D;
@@ -263,6 +264,8 @@ h5, h6
 .tableDisplay tr td{
     border: 1px solid #6E3F4A;
     empty-cells: show;
+     overflow: hidden;
+     word-wrap: break-word;
 }
 
 .tableBorderClass tr td{
